--- a/core/app/views/header_v3.html
+++ b/core/app/views/header_v3.html
@@ -324,7 +324,7 @@
               #{list items:models.User.COR.values(), as:'c'}
                 <li><!-- start notification -->
                   <a href="${c.url()}">
-                    <i class="fa fa-users text-aqua"></i> ${c.label()}
+                    <i class="fa fa-circle-o text-red"></i> ${c.label()}
                   </a>
                 </li>
               #{/list}
