--- a/core/app/views/main_v3.html
+++ b/core/app/views/main_v3.html
@@ -7,6 +7,8 @@
   <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/public/stylesheets/bootstrap-responsive.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script type="text/javascript">
       #{if play.Play.mode.isDev()}
       window.PLAY_MODE = "DEV";
@@ -17,10 +19,9 @@
   </script>
 #{render '_css_header_v3.html' /}
 #{get 'moreStyles' /}
-#{render '_js_header_v3.html' /}
-#{get 'moreScripts' /}
+
 </head>
-<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
+<body class="hold-transition skin-black-light sidebar-collapse">
 <div class="content-wrapper">
 
 #{render 'header_v3.html'/}
@@ -32,6 +33,9 @@
 #{render 'aside.html'/}
 #{render 'footer.html'/}
 </div>
+
+#{render '_js_header_v3.html' /}
+#{get 'moreScripts' /}
 
 </body>
 </html>
