--- a/core/app/views/Deliveryments/_fba_carton_contents.html
+++ b/core/app/views/Deliveryments/_fba_carton_contents.html
@@ -1,13 +1,18 @@
-<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>FBA Carton Contents</h3><p class="muted">默认数据来源于供应商的产品</p>
-  </div>
-  <div class="modal-body">
-      <div id="refresh_div"></div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <a class="btn btn-primary" id="sumbitDeployFBAs">提交</a>
+<div id="fba_carton_contents_modal" class="modal fade bs-example-modal-lg" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>FBA Carton Contents</h3>
+        <p class="muted">默认数据来源于供应商的产品</p>
+      </div>
+      <div class="modal-body">
+        <div id="refresh_div"></div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <a class="btn btn-primary" id="sumbitDeployFBAs">提交</a>
+      </div>
+    </div>
   </div>
 </div>
