物料采购单 去除 coffee 引入

--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -2,7 +2,7 @@
 #{set title:"物料采购单列表 (${materialPurchases.size()})" /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
-    #{script 'deliveryments/index.coffee'/}
+    #{script 'deliveryments/index.es6'/}
     #{script 'procureunits/_unit_list.coffee'/}
     #{script 'materialPurchases/index.es6'/}
 #{/set}
