--- a/core/app/views/Materials/indexBom.html
+++ b/core/app/views/Materials/indexBom.html
@@ -1,4 +1,4 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html'/}
 #{set title:"包装组列表"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
@@ -12,111 +12,111 @@
 #{errorMsgs /}
 #{flash_alert /}
 
-<div class="row-fluid">
-  <form action="@{Materials.indexBom()}" method="get" class="search_form" id="search_Form">
-    <div class="row-fluid">
-      <div class="span12">
-        
-        <div class="input-prepend input-append inline">
-          <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="包装组编号 or 名称" value="${p.search}">
-          <input type="hidden" name="p.page" value="${p.page}">
-          <button class="btn btn-primary" data-loading>搜索</button>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <form action="@{Materials.indexBom()}" method="get" class="form-inline" id="search_Form">
+          <div class="row-fluid">
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input type="text" class="form-control" style="width:220px;" name="p.search"
+                     placeholder="包装组编号 or 名称" value="${p.search}">
+              <input type="hidden" name="p.page" value="${p.page}">
+            </div>
+            <button class="btn btn-primary" data-loading>搜索</button>
+            <input type="button" class="btn btn-success" id="addBom" value="新增包装BOM">
+          </div>
+        </form>
+      </div>
+
+      <form method="post" id="inboundForm">
+        <div class="box-body">
+          <table class="table table-condensed table-bordered" id="data-table">
+            <tr>
+              <th width="15%;">B0M—ID</th>
+              <th width="30%;">名称</th>
+              <th width="100px;">PM</th>
+              <th width="15%;">状态</th>
+              <th width="10%;">更新时间</th>
+              <th>操作</th>
+            </tr>
+          #{list items:boms, as:'m'}
+            <tr>
+              <td>${m.number}</td>
+              <td style="cursor:pointer;" data-url="@{Materials.showMaterialListByBom(m.id)}" data-id="${m.id}"
+                  name="clickTd">
+                <span><i class="icon-reorder"></i></span>
+                <span>${m.name}</span>
+                <span class="badge badge-info">${m.materials.size()}</span>
+              </td>
+              <td>${m.creator?.username}</td>
+              <td>${m.status.label()}</td>
+              <td>#{time_tooltip time:m.updateDate/}</td>
+              <td>
+                <a href="@{Materials.editBom(m.id)}" class="btn btn-xs btn-primary">编辑</a>
+                <a href="@{Materials.deleteMaterialBom(m.id)}" class="btn btn-xs btn-danger">删除</a>
+              </td>
+            </tr>
+          #{/list}
+          </table>
         </div>
 
-        <input type="button" class="btn btn-success" id="addBom" value="新增包装BOM">
-      </div>
-    </div>
-  </form>
+        <div class="box-footer">
+        #{bootstrap_pager_v3 pi:p, url:'' /}
+        </div>
 
-  <form method="post" id="inboundForm">
-    <div class="row-fluid">
-      <div class="span12">
-        <table class="table table-condensed table-bordered" id="data-table">
-          <tr>
-            <th width="15%;">B0M—ID</th>
-            <th width="30%;">名称</th>
-            <th width="100px;">PM</th>
-            <th width="15%;">状态</th>
-            <th width="10%;">更新时间</th>
-            <th>操作</th>
-          </tr>
-        #{list items:boms, as:'m'}
-          <tr>
-            <td>${m.number}</td>
-            <td style="cursor:pointer;" data-url="@{Materials.showMaterialListByBom(m.id)}" data-id="${m.id}"
-                name="clickTd">
-              <span><i class="icon-reorder"></i></span>
-              <span>${m.name}</span>
-              <span class="badge badge-info">${m.materials.size()}</span>
-            </td>
-            <td>${m.creator?.username}</td>
-            <td>${m.status.label()}</td>
-            <td>#{time_tooltip time:m.updateDate/}</td>
-            <td>
-              <a href="@{Materials.editBom(m.id)}" class="btn btn-mini btn-primary">编辑</a>
-              <a href="@{Materials.deleteMaterialBom(m.id)}" class="btn btn-mini btn-danger">删除</a>
-            </td>
-          </tr>
-        #{/list}
-          <tr>
-            <td colspan="10">
-            #{if boms.size() == 0}
-              暂时还没有物料信息
-            #{/if}
-            #{else }
-                #{bootstrap_pager pi:p, url:'' /}
-            #{/else}
-            </td>
-          </tr>
-        </table>
-      </div>
+      </form>
     </div>
-  </form>
+  </div>
 </div>
 
-
-<div id="bom_modal" class="modal hide fade">
-  <div class="modal-header">
-    <h4>包装信息</h4>
-  </div>
-  <div class="modal-body" style="height:300px;">
-    <form action="@{Materials.createBom()}" method="post" id="create_form">
-      <table class="table table-condensed table-bordered">
-        <tr>
-          <th>B0M—ID</th>
-          <td><input type="text" name="b.number" required></td>
-        </tr>
-        <tr>
-          <th>名称</th>
-          <td><input type="text" name="b.name" required></td>
-        </tr>
-        <tr>
-          <th>PM</th>
-          <td>
-            <select name="b.pm.id" class="selectize" style="width:220px;">
-            #{list items:users, as:'u'}
-              <option value="${u.id}" ${u.username==currUser.username?'selected':''}>${u.username}</option>
-            #{/list}
-            </select>
-          </td>
-        </tr>
-        <tr>
-          <th>状态</th>
-          <td>
-            <select name="b.status">
-            #{list items:models.material.MaterialBom.S, as:'s'}
-              <option value="${s.name()}">${s.label()}</option>
-            #{/list}
-            </select>
-          </td>
-        </tr>
-      </table>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <button class="btn btn-primary" id="submitCreateBtn">提交</button>
+<div id="bom_modal" class="modal fade bs-example-modal-lg">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4>包装信息</h4>
+      </div>
+      <div class="modal-body">
+        <form action="@{Materials.createBom()}" method="post" id="create_form">
+             <table class="table table-condensed table-bordered">
+               <tr>
+                 <th>B0M—ID</th>
+                 <td><input type="text" name="b.number" required></td>
+               </tr>
+               <tr>
+                 <th>名称</th>
+                 <td><input type="text" name="b.name" required></td>
+               </tr>
+               <tr>
+                 <th>PM</th>
+                 <td>
+                   <select name="b.pm.id" class="selectize" style="width:220px;">
+                   #{list items:users, as:'u'}
+                     <option value="${u.id}" ${u.username==currUser.username?'selected':''}>${u.username}</option>
+                   #{/list}
+                   </select>
+                 </td>
+               </tr>
+               <tr>
+                 <th>状态</th>
+                 <td>
+                   <select name="b.status">
+                   #{list items:models.material.MaterialBom.S, as:'s'}
+                     <option value="${s.name()}">${s.label()}</option>
+                   #{/list}
+                   </select>
+                 </td>
+               </tr>
+             </table>
+           </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-primary" id="submitCreateBtn">提交</button>
+      </div>
+    </div>
   </div>
 </div>
+
 
