出货单修改

--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -85,15 +85,17 @@
               <div class="box box-warning collapsed-box box-solid">
                 <div class="box-header with-border">
                   <h3 class="box-title" data-toggle="toggle" data-target="#tl">
-                    Timeline <i class="icon-reorder" data-widget="collapse"></i>
+                    Timeline <i class="icon-reorder"></i>
                   </h3>
                   <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
                     </button>
                   </div>
                 </div>
-                <div class="box-body" style="display: none;">
-                  <div id="tl" class="col-sm-12" style="height:350px;"></div>
+                <div class="box-body">
+                  <div class="row-fluid">
+                    <div id="tl" class="col-sm-12" style="height:350px;"></div>
+                  </div>
                 </div>
               </div>
 
