--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -123,7 +123,7 @@
                 #{power.ck "procures.btborderindex"}
                   <li><a href="@{BtbCustoms.btbOrderIndex()}">B2B销售订单信息</a></li>
                 #{/power.ck}
-                #{power.ck "orders.indexEbay"}
+                #{power.ck "orders.indexebay"}
                   <li><a href="@{Orders.indexEbay()}">Ebay订单(AMAZON部分)</a></li>
                 #{/power.ck}
                 #{power.ck "shipitems.indexb2b"}
