开发重新抓取费用代码

--- a/core/app/views/Orders/index.html
+++ b/core/app/views/Orders/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'Orders (' + p.count() + ')'/}
 #{set 'moreScripts'}
-    #{script 'orders/orders.coffee'/}
+    #{script 'orders/orders.es6'/}
     #{script 'component/pagination.coffee'/}
 #{/set}
 
