--- a/core/app/views/MaterialOutbounds/index.html
+++ b/core/app/views/MaterialOutbounds/index.html
@@ -1,8 +1,8 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title:"物料出库单列表"  /}
 #{set 'moreScripts'}
-  #{script 'materialOutbounds/index.es6'/}
-  #{script 'component/pagination.coffee'/}
+    #{script 'materialOutbounds/index.es6'/}
+    #{script 'component/pagination.coffee'/}
 #{/set}
 <style>
   .table td{
@@ -12,63 +12,65 @@
 #{errorMsgs /}
 #{flash_alert /}
 
-<div class="row-fluid">
-  <form action="@{MaterialOutbounds.index()}" method="get" class="search_form" id="search_Form">
-    <div class="span12">
-      <div class="input-prepend input-append inline">
-        <span class="add-on">From:</span>
-        <input type="date" name="p.from" value="${p.from.date()}">
-        <span class="add-on">To:</span>
-        <input type="date" name="p.to" value="${p.to.date()}">
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+
+      <div class="box-header with-border">
+        <form action="@{MaterialOutbounds.index()}" method="get" class="form-inline" id="search_Form">
+          <div class="row-fluid">
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">From:</div>
+                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">To:</div>
+                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+              </div>
+            </div>
+
+            <select name="p.status" class="form-control">
+              <option value="">状态</option>
+            #{list items:models.whouse.Outbound.S, as:'s'}
+              <option #{if p.status==s} selected #{/if} value="${s.name()}">${s.label()}</option>
+            #{/list}
+            </select>
+
+            <select name="p.cooperId" class="form-control selectize" style="width:150px;">
+              <option value="">收货方</option>
+            #{list items:cooperators, as:'cop'}
+              <option value="${cop.id}" #{if cop.id==p.cooperId} selected #{/if}>${cop.name}</option>
+            #{/list}
+            </select>
+
+            <select name="p.type" class="form-control">
+              <option value="">出库类型</option>
+            #{list items:models.material.MaterialOutbound.C, as:'t'}
+              <option value="${t.name()}" #{if t==p.type} selected #{/if}>${t.label()}</option>
+            #{/list}
+            </select>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input type="text" style="width:200px;" class="form-control" name="p.search" placeholder="物料出库单ID,物料编码" value="${p.search}">
+              <input type="hidden" name="p.page" value="${p.page}">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+            <a href="javascript:void(0)" class="btn btn-primary" id="confirmOutboundBtn">确认出库</a>
+            <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-success">
+              <i class="icon-list-alt"></i>导出</a>
+          </div>
+        </form>
       </div>
 
-      <select name="p.status" class="inline">
-        <option value="">状态</option>
-      #{list items:models.whouse.Outbound.S, as:'s'}
-        <option #{if p.status==s} selected #{/if} value="${s.name()}">${s.label()}</option>
-      #{/list}
-      </select>
-
-      <select name="p.cooperId" class="inline selectize" style="width:150px;">
-        <option value="">收货方</option>
-        #{list items:cooperators, as:'cop'}
-          <option value="${cop.id}" #{if cop.id==p.cooperId} selected #{/if}>${cop.name}</option>
-        #{/list}
-      </select>
-
-      <select name="p.type" class="inline">
-        <option value="">出库类型</option>
-        #{list items:models.material.MaterialOutbound.C, as:'t'}
-          <option value="${t.name()}" #{if t==p.type} selected #{/if}>${t.label()}</option>
-        #{/list}
-      </select>
-
-      <div class="input-prepend input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" style="width:200px;" name="p.search" placeholder="物料出库单ID,物料编码" value="${p.search}">
-        <input type="hidden" name="p.page" value="${p.page}">
-        <button class="btn btn-primary" data-loading>搜索</button>
-      </div>
-    </div>
-
-    <div class="row-fluid">
-      <div class="span12">
-        <div class="inline">
-          <a href="javascript:void(0)" class="btn btn-primary" id="confirmOutboundBtn">确认出库</a>
-          <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info inline">
-            <i class="icon-list-alt"></i>导出</a>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-
-<form method="post" id="submit_form" action="@{MaterialOutbounds.confirmMaterialOutbound()}">
-  <div class="row-fluid">
-    <div class="tab-content">
-      <div class="tab-pane fade active in" id='currentPage'>
-
-        <div class="span12">
+      <form method="post" id="submit_form" action="@{MaterialOutbounds.confirmMaterialOutbound()}">
+        <div class="box-body">
           <table class="table table-condensed table-bordered" id="data_table">
             <tr>
               <th style="width:15px;">
@@ -107,23 +109,18 @@
               <td title="${o.memo}">${o.memo.overLong()}</td>
             </tr>
           #{/list}
-            <tr>
-              <td colspan="14">
-              #{if materialOutbounds.size() == 0}
-                暂时还没有入库记录
-              #{/if}
-              #{else }
-                  #{bootstrap_pager pi:p, url:'' /}
-              #{/else}
-              </td>
-            </tr>
           </table>
         </div>
+      </form>
+
+      <div class="box-footer">
+      #{bootstrap_pager_v3 pi:p, url:'' /}
       </div>
 
     </div>
   </div>
-</form>
+</div>
+
 
 <div id="fba_carton_contents_modal" class="modal hide fade" style="width:1000px;left:40%;">
   <div class="modal-body">
